[package]
name = "casper-binary-access-client"
version = "0.1.0"
edition = "2021"
authors = ["Rafał Chabowski <rafal@casperlabs.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = { version = "3.0.0" }
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.33.0", features = [] }
tokio-stream = { version = "0.1.14", features = [] }

[patch.crates-io]
casper-types = { path = "../casper-node/types" }
